--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Minha página</h1>
-    <p>Esta é a página principal do site.</p>
+    <p>Esta é a página principal do site do Laercio Cruvinel.</p>
 </body>
 </html>
